unpackaged/main/default/objects/ApplicationInterestRate__c/ApplicationInterestRate__c.object-meta.xml
<CustomObject>
    <label>Application Interest Rate</label>
    <nameField>
        <displayFormat>AIR-{0000}</displayFormat>
        <label>Application Interest Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Interest Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>