unpackaged/main/default/objects/ApplicationInterestRate__c/fields/FloatingRateIndex__c.field-meta.xml
<CustomField>
    <fullName>FloatingRateIndex__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Floating Rate Index</label>
    <referenceTo>loan__Floating_Rate_Index__c</referenceTo>
    <relationshipLabel>Application Interest Rates</relationshipLabel>
    <relationshipName>ApplicationInterestRates</relationshipName>
    <type>Lookup</type>
</CustomField>