unpackaged/main/default/objects/ApplicationInterestRate__c/fields/InterestRate__c.field-meta.xml
<CustomField>
    <fullName>InterestRate__c</fullName>
    <label>Interest Rate</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>