unpackaged/main/default/objects/ApplicationInterestRate__c/fields/MarginRate__c.field-meta.xml
<CustomField>
    <fullName>MarginRate__c</fullName>
    <label>Margin Rate</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>